04-kubernetes-ingress-and-network-policies/egress-api-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-1-egress-policy
spec:
  podSelector:
    matchLabels:
      app: api-1
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - podSelector:
        matchLabels:
          app: api-3
