04-kubernetes-ingress-and-network-policies/ingress-api-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-1-policy
spec:
  podSelector:
    matchLabels:
      app: api-1
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: api-2
